# databaker-docker

./: Dockerfile  Makefile  Pipfile  README.md  cucumber-format.patch  pyproject.toml  requirements-dev.git.txt  requirements-dev.pypi.txt  requirements.git.txt  requirements.pypi.txt  requirements.txt
.github/: build.yml
.github/workflows/: build.yml  dev.yml  release.yml  test-amd64.yml  test-arm64.yml  test.yml
